--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,5 +5,14 @@
 html,
 body {
   max-width: 100vw;
+  height: 100vh;
   overflow-x: hidden;
+}
+
+html {
+  overflow-y: hidden;
+}
+
+::-webkit-scrollbar {
+  display: none;
 }
